--- a/hw1/Makefile.windows
+++ b/hw1/Makefile.windows
@@ -1,10 +1,10 @@
 PROJECT_DIR=.
 
-MINGW_BIN=C:/Homework/mingw64/bin
+MINGW_BIN=C:/mingw64/bin
 CFLAGS=-I${PROJECT_DIR}/include/
 CC=${MINGW_BIN}/gcc.exe
 CXX=${MINGW_BIN}/g++.exe
-OPENCV_DIR=C:/Homework/opencv/build/install
+OPENCV_DIR=C:/opencv/build/install
 
 # Using OpenCV for Visualization
 OPENCV=1
@@ -15,9 +15,14 @@ endif
 
 SRC_DIR=${PROJECT_DIR}/src
 
-all: compile
-	./bin/main.exe 
+all: run
 
-compile: ${SRC_DIR}/linked_list.cpp ${SRC_DIR}/queue.cpp ${SRC_DIR}/stack.cpp ${SRC_DIR}/graph.cpp ${SRC_DIR}/bfs.cpp ${SRC_DIR}/rdfs.cpp ${SRC_DIR}/dfs.cpp ${SRC_DIR}/articulation_and_bridge.cpp ${SRC_DIR}/main.cpp
-	${CXX} ${CFLAGS} $^ ${LDFLAGS} -o bin/main.exe  
+compile: main
+
+run: compile
+	./bin/main
+
+main: ${SRC_DIR}/linked_list.cpp ${SRC_DIR}/graph.cpp ${SRC_DIR}/stack.cpp ${SRC_DIR}/main.cpp
+	${CXX} ${CFLAGS} $^ ${LDFLAGS} -o bin/$@.exe 
+
 
