--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -66,5 +66,6 @@
         "xtree": "cpp",
         "xutility": "cpp",
         "queue": "cpp"
-    }
+    },
+    "C_Cpp.errorSquiggles": "disabled"
 }
